--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.6.1",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1",
